changed manufacturer name

--- a/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
+++ b/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
@@ -22,7 +22,7 @@ PART
 	category = Science
 	subcategory = 0
 	title = Radio Astronomy Telescope
-	manufacturer = Ionic Protonic Electronics
+	manufacturer = ZZZ Industries in cooperation with MunSeeker Artisanal Devices
 	description = A new type of large radio telescope that can be packed into a small volume and deployed at remote locations. Contains a small SAS for stability control. The receiver needs 5 units electrical charge per second. Provides science reports.
 	attachRules = 1,1,0,0,0
 
