--- a/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
+++ b/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
@@ -27,7 +27,7 @@ PART
 	attachRules = 1,1,0,0,0
 
 	// --- standard part parameters ---
-	mass = 3
+	mass = 5
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -46,7 +46,7 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 5
+			rate = 500
 		}
 	}
 
@@ -81,8 +81,8 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = deploy
-		startEventGUIName =  deploy
-		endEventGUIName = retract
+		startEventGUIName =  Deploy
+		endEventGUIName = Retract
 	}
 
 }
