added telescope science experiment

--- a/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
+++ b/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
@@ -22,7 +22,7 @@ PART
 	category = Science
 	subcategory = 0
 	title = Triple-Z Radio Astronomy Telescope
-	manufacturer = ZZZ Industries & MunSeeker Artisanal Devices
+	manufacturer = ZZZ Industries, Wild Blue Industries, MunSeeker Artisanal Devices
 	description = A new type of large radio telescope that can be packed into a small volume and deployed at remote locations. Contains a small SAS for stability control. The receiver needs 5 units electrical charge per second. Provides science reports.
 	attachRules = 1,1,0,0,0
 
@@ -60,7 +60,7 @@ PART
 	{
 		name = ModuleScienceExperiment	
 	
-		experimentID = gravityScan
+		experimentID = radioScope
 	
 		experimentActionName = Log Astronomy Data
 		resetActionName = Delete Data
@@ -69,7 +69,7 @@ PART
 		useActionGroups = True
 		hideUIwhenUnavailable = False
 		
-		xmitDataScalar = 0.4
+		xmitDataScalar = 0.74
 		dataIsCollectable = True
 		collectActionName = Take Data
 		interactionRange = 1.2
