--- a/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
+++ b/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
@@ -13,7 +13,7 @@ PART
 	scale = 1
 	rescaleFactor = 1
 
-	node_stack_bottom = 0.0, -0.04, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_bottom = 0.0, -0.04, 0.0, 0.0, -1.0, 0.0, 0
 	node_attach = 0.0, 0.0, -0.04, 0.0, -1.0, 0.0, 0
 
 	TechRequired = advScienceTech
@@ -23,7 +23,7 @@ PART
 	subcategory = 0
 	title = Triple-Z Radio Astronomy Telescope
 	manufacturer = ZZZ Industries, Wild Blue Industries, MunSeeker Artisanal Devices
-	description = A new type of large radio telescope that can be packed into a small volume and deployed at remote locations. Contains a small SAS for stability control. The receiver needs 5 units electrical charge per second. Provides science reports.
+	description = A new type of large radio telescope that can be packed into a small volume and deployed at remote locations. Contains a small SAS for stability control (Turn off manually for launch!). The receiver needs 5 units electrical charge per second. Provides science reports.
 	attachRules = 1,1,0,0,0
 
 	// --- standard part parameters ---
@@ -31,9 +31,9 @@ PART
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
-	angularDrag = 2
+	angularDrag = 4
 	crashTolerance = 7
-	maxTemp = 3000
+	maxTemp = 2000
 
 	MODULE
 	{
