Fixed electrical usage of reaction wheels to be more in line with stock Updated description

--- a/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
+++ b/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
@@ -23,7 +23,7 @@ PART
 	subcategory = 0
 	title = Triple-Z Radio Astronomy Telescope
 	manufacturer = ZZZ Industries, Wild Blue Industries, MunSeeker Artisanal Devices
-	description = A new type of large radio telescope that can be packed into a small volume and deployed at remote locations. Contains a small SAS for stability control (Turn off manually for launch!). The receiver needs 5 units electrical charge per second. Provides science reports.
+	description = A new type of large radio telescope that can be packed into a small volume and deployed at remote locations. Contains a small SAS for stability control.  The receiver needs 5 units electrical charge per second. Provides science reports.
 	attachRules = 1,1,0,0,0
 
 	// --- standard part parameters ---
@@ -46,7 +46,7 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 500
+			rate = 0.1
 		}
 	}
 
