--- a/GameData/MunSeeker/ZZZ_RadioTelescope/MunSeeker_ZZZ_RadioTelescope_Contracts.cfg
+++ b/GameData/MunSeeker/ZZZ_RadioTelescope/MunSeeker_ZZZ_RadioTelescope_Contracts.cfg
@@ -1,5 +1,5 @@
-CONTRACT_GROUP
-{
+//CONTRACT_GROUP
+//{
     name = ZZZRadioTelescope
     minVersion = 1.5.0
     maxSimultaneous = 1
@@ -7,9 +7,10 @@ CONTRACT_GROUP
 	{
 		// Name of the contract group
 		name = KerbinOrbitalTelescope
+		displayName = Kerbin Orbital Telescope
 		// Use this to specify the minimum version of Contract Configurator
 		// That is required to run contracts in this group.
-		minVersion = 1.5.0
+		minVersion = 1.15.0
 		// The maximum number of times that contracts within this contract
 		// group can be completed (0 being unlimited).
 		// Default = 0
@@ -18,14 +19,17 @@ CONTRACT_GROUP
 		// that can be active at one time (0 being unlimited).
 		// Default = 0
 		maxSimultaneous = 1
+
+    	agent = Space Penguins, Inc
 	}
 	CONTRACT_GROUP
 	{
 		// Name of the contract group
 		name = MunOrbitalTelescope
+		displayName = Mun Orbital Telescope
 		// Use this to specify the minimum version of Contract Configurator
 		// That is required to run contracts in this group.
-		minVersion = 1.5.0
+		minVersion = 1.15.0
 		// The maximum number of times that contracts within this contract
 		// group can be completed (0 being unlimited).
 		// Default = 0
@@ -34,8 +38,10 @@ CONTRACT_GROUP
 		// that can be active at one time (0 being unlimited).
 		// Default = 0
 		maxSimultaneous = 1
+
+    	agent = Space Penguins, Inc
 	}
-}
+//}
 
 
 // #######################################################################################
@@ -46,7 +52,9 @@ CONTRACT_GROUP
 CONTRACT_TYPE
 {
     name = KerbinOrbitalTelescopeDeployment
+    displayName = Kerbin Orbital Telescope Deployment
     group = KerbinOrbitalTelescope
+
     title = Launch a Radio Telescope Observatory to Kerbin Orbit
     description = Our scientists are eager to explore the universe with an orbital radio telescope and research facility in orbit around Kerbin.
     synopsis = Launch a radio telescope to Kerbin orbit
@@ -286,6 +294,7 @@ CONTRACT_TYPE
 CONTRACT_TYPE
 {
     name = MunOrbitalTelescopeDeployment
+    displayName = Mun Orbital Telescope Deployment
     group = MunOrbitalTelescope
     title = Launch a Radio Telescope Observatory to Mun Orbit
     description = Our scientists are very happy with the Kerbin orbital radio telescope. A second telescope in Mun Orbit will allow them to see even further into deep space.
