--- a/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
+++ b/GameData/MunSeeker/ZZZ_RadioTelescope/Parts/telescope/part.cfg
@@ -37,6 +37,8 @@ PART
 
 	bulkheadProfiles = srf, size2
 
+	tags = camera telescope detect satellite scan radio
+
 	MODULE
 	{
 		name = ModuleReactionWheel
